--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <h2>Clients</h2>
   <a href="http://tedortea.com/"><img alt="tedor-tea" src="assets/img/client-tedortea.jpg" height="70"></a><a href="http://rq-lightart.com/"><img alt="rhea-quien-art" src="assets/img/client-rq-lightart-logo.png" height="70"></a>
   <br><br><br>
-  <h2>Acknowledgement</h2>
+  <h2>Acknowledgements</h2>
   <table>
     <tr>
       <td><img src="assets/img/recommend-antonia.jpg" height="200px" width="200px"></td>
