--- a/index-hun.html
+++ b/index-hun.html
@@ -62,8 +62,8 @@
   <br>
   <table>
     <tr>
-      <th>资源</th>
-      <th>目标</th>
+      <th>Eredeti</th>
+      <th>Fordítás</th>
     </tr>
     <tr>
       <td><p>情感和感性的音乐体验会改变人体功能，这一点已为人所知（G. Harrer和H. Harrer，1977）。 音乐尤其会改变脉搏，血压，呼吸，心理电反射和其他自主功能。 实验表明，通过听非洲的鼓声，身体会做出反应（Rouget，1985），而我们的大部分身体功能都是通过大脑来进行的（G. Harrer和H. Harrer，1977）。 因此，如果音乐影响了我们的感觉和思维方式，那么音乐可以用于各种目的，例如 治愈，享受，甚至进行宣传。</p></td>
@@ -76,7 +76,7 @@ További példák:<a href="https://khofstadter.info/assets/doc/KHofstader-CV-gen
   <h2>Ügyfeleim</h2>
   <a href="http://tedortea.com/"><img alt="tedor-tea" src="assets/img/client-tedortea.jpg" height="70"></a><a href="http://rq-lightart.com/"><img alt="rhea-quien-art" src="assets/img/client-rq-lightart-logo.png" height="70"></a>
   <br><br><br>
-  <h2>致谢</h2>
+  <h2>Ajánlások</h2>
   <table>
     <tr>
       <td><img src="assets/img/recommend-antonia.jpg" height="200px" width="200px"></td>
