--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta charset="UTF-8">
   <style>
     body {
       /* margin: 0 auto; */
@@ -71,6 +72,12 @@
     </tr>
   </table>
     <p>More examples: <a href="assets/doc/KHofstader-CV-general-2019.pdf">pdf</a></p>
+</details>
+<details>
+<summary>Interpreting Example</summary>
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vaSoaY8fPV4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
 </details>
   <h2>Clients</h2>
   <a href="http://tedortea.com/"><img alt="tedor-tea" src="assets/img/client-tedortea.jpg" height="70"></a><a href="http://rq-lightart.com/"><img alt="rhea-quien-art" src="assets/img/client-rq-lightart-logo.png" height="70"></a>
